# USBInsertionRL

./: .gitignore  LICENSE  README.md  flatten.py  index.html  pyproject.toml  run_actor.sh  run_learner.sh  run_record_demo.sh  run_record_recovery.sh  run_record_success_fail.sh  run_stage_data_extract.sh  run_stage_data_label.sh  run_train_classifier.sh  run_train_stage_classifier.sh  run_validate_stage_classifier.sh  run_validation.sh  test_camera.py
examples/: record_demos.py  record_recovery.py  record_success_fail.py  train_bc.py  train_reward_classifier.py  train_rlpd.py  train_stage_classifier.py  validate_stage_classifier.py
examples/experiments/: config.py  mappings.py
examples/experiments/usb_pickup_insertion/: config.py  wrapper.py
franka_env/envs/: franka_env.py  relative_env.py  wrappers.py
hil-serl-ur5e-server/: interpolator.py  read_offset.py  robotiq_gripper_driver.py  transformation.py  ur5e_driver.py  ur_server.py
serl_launcher/agents/continuous/: sac_hybrid_single.py
serl_launcher/common/: common.py  encoding.py  wandb.py
serl_launcher/networks/: reward_classifier.py  reward_classifier_backup.py
serl_launcher/utils/: extract_data.py  logging_utils.py  stage_data_tool.py  train_utils.py  view_data.py
static/images/: Thumbs.db
