[project]
name = "hil-serl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentlace",
    "chex>=0.1.90",
    "distrax>=0.1.5",
    "flax>=0.10.7",
    "gymnasium>=1.2.2",
    "jax[cuda12]>=0.6.2",
    "natsort>=8.4.0",
    "pynput>=1.8.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
agentlace = { git = "https://github.com/youliangtan/agentlace.git" }
